Added the responsiveness for the mobile version and chnaged the whole theme according to the diamond

--- a/src/styles/Divider.css
+++ b/src/styles/Divider.css
@@ -5,5 +5,5 @@
 .divider-icon {
   top: -15px;
   left: 50%;
-  background-image: linear-gradient(to top, #9b4431, #853425);
+  background-color: #868686;
 }
