--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,14 @@ h1 {
   letter-spacing: -0.4rem;
 }
 
+/* .gradient-text {
+  background: linear-gradient(to right, #d4e4f1, #c0c0c0, #f5e1a4, #ffffff);
+  background: linear-gradient(to right, #a1d9ff, #e1e1e1, #ffef7f, #ffffff);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+} */
+
 .home,
 .home-second-section {
   background-size: cover; /* Makes sure the background covers the whole area */
@@ -20,12 +28,22 @@ h1 {
   font-family: "Gilda Display", serif;
 }
 
-.border-light {
-  border: 1px solid #3c3839;
-}
-
 .brown-gradient {
   background-image: linear-gradient(to top, #c9563f 20%, #9b4431, #853425 70%);
+}
+
+.gray-gradient {
+  /* background-image: linear-gradient(to top, #e0e0e0 20%, #828282, #868686 70%); */
+  background-image: linear-gradient(to top, #e0e0e0 20%, #b7b5b5, #868686 70%);
+}
+
+.gray-gradient-reverse {
+  background-image: linear-gradient(
+    to bottom,
+    #e0e0e0 20%,
+    #b7b5b5,
+    #868686 70%
+  );
 }
 
 .brown-gradient-reverse {
@@ -35,6 +53,11 @@ h1 {
     #9b4431,
     #853425 70%
   );
+}
+
+::selection {
+  background-color: #b7b5b5; /* 18K Gold background color */
+  color: #000; /* Dark text color for contrast */
 }
 
 @media screen and (max-width: 768px) {
